# gi012

./: .gitignore  README.md  graphrag-vs-lightrag-analysis.md  rag-deployment-guide.md
ai-service-hub/: .gitignore  README.md  app.py  config.json
ai-service-hub/static/: app.js  style.css
ai-service-hub/templates/: index.html
claude-code-research/: README.md
claude-multi-agent-research/: README.md
docs/: ssh-server-setup.md
multi-ai-orchestrator/: .gitignore  README.md  requirements.txt
multi-ai-orchestrator/config/: global.yaml
multi-ai-orchestrator/config/routing/: task-routing.yaml
multi-ai-orchestrator/config/services/: S001-codex-example.yaml  S002-gemini-example.yaml  S003-claude-docker.yaml
multi-ai-orchestrator/config/token-budget/: per-service-limits.yaml
multi-ai-orchestrator/scripts/: init-repo.sh
multi-ai-orchestrator/skills/orchestrator/: SKILL.md
mysql-dedup-procedure/: README.md  TEST_REPORT.md  run_all_tests.sh  sp_cleanup_duplicate_records.sql  test_run.sql  test_setup.sql
nvidia-api-research/: .env.example  README.md
nvidia-api-research/examples/: test_api.py
platform-enterprise-docs/: 00-项目总览.md  01-技术栈规范.md  02-后端架构设计.md  03-前端架构设计.md  04-微服务设计.md  05-数据库设计.md  06-安全设计.md  07-部署运维设计.md  08-API设计规范.md  09-项目结构规范.md
platform-enterprise-docs/platform-backend/: pom.xml
platform-enterprise-docs/platform-backend/platform-auth/: pom.xml
platform-enterprise-docs/platform-backend/platform-business/: pom.xml
platform-enterprise-docs/platform-backend/platform-common/: pom.xml
platform-enterprise-docs/platform-backend/platform-core/: pom.xml
platform-enterprise-docs/platform-backend/platform-file/: pom.xml
platform-enterprise-docs/platform-docker/: Dockerfile.backend  Dockerfile.frontend  README.md  deploy.sh  docker-compose.yml
platform-enterprise-docs/platform-ui/: index.html  package.json  tsconfig.json  vite.config.ts
platform-enterprise-python/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
platform-enterprise-python/deploy/docker/: Dockerfile.api  Dockerfile.auth  Dockerfile.base  Dockerfile.notification  Dockerfile.worker  docker-compose.yml  init-db.sql  prometheus.yml
platform-enterprise-python/deploy/kubernetes/: api-deployment.yaml  auth-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml
platform-enterprise-python/docs/: 01-architecture-overview.md  02-technology-stack.md  03-service-design.md  04-development-guide.md  05-deployment-ops.md
platform-enterprise-python/libs/platform-cache/: pyproject.toml
platform-enterprise-python/libs/platform-cache/src/platform_cache/: __init__.py  client.py  rate_limiter.py
platform-enterprise-python/libs/platform-core/: pyproject.toml
platform-enterprise-python/libs/platform-core/src/platform_core/: __init__.py
platform-enterprise-python/libs/platform-core/src/platform_core/config/: __init__.py  settings.py
platform-enterprise-python/libs/platform-core/src/platform_core/exceptions/: __init__.py  base.py
platform-enterprise-python/libs/platform-core/src/platform_core/middleware/: __init__.py  request_id.py  timing.py
platform-enterprise-python/libs/platform-core/src/platform_core/schemas/: __init__.py  base.py  pagination.py  response.py
platform-enterprise-python/libs/platform-core/src/platform_core/security/: __init__.py  jwt.py  password.py
platform-enterprise-python/libs/platform-core/src/platform_core/utils/: __init__.py  datetime.py  id_generator.py
platform-enterprise-python/libs/platform-db/: pyproject.toml
platform-enterprise-python/libs/platform-db/src/platform_db/: __init__.py  base.py  repository.py  session.py
platform-enterprise-python/libs/platform-messaging/: pyproject.toml
platform-enterprise-python/libs/platform-messaging/src/platform_messaging/: __init__.py  consumer.py  publisher.py
platform-enterprise-python/libs/platform-messaging/src/platform_messaging/events/: __init__.py  base.py  user.py
platform-enterprise-python/libs/platform-observability/: pyproject.toml
platform-enterprise-python/libs/platform-observability/src/platform_observability/: __init__.py  health.py  logging.py  metrics.py  tracing.py
platform-enterprise-python/services/platform-api/: pyproject.toml
platform-enterprise-python/services/platform-api/src/platform_api/: __init__.py  config.py  dependencies.py  main.py  middleware.py
platform-enterprise-python/services/platform-api/src/platform_api/routers/: __init__.py  health.py  proxy.py
platform-enterprise-python/services/platform-auth/: pyproject.toml
platform-enterprise-python/services/platform-auth/src/platform_auth/: __init__.py  config.py  dependencies.py  main.py  models.py  routers.py  schemas.py  service.py
platform-enterprise-python/services/platform-notification/: pyproject.toml
platform-enterprise-python/services/platform-notification/src/platform_notification/: __init__.py  config.py  dependencies.py  main.py  models.py  routers.py  schemas.py  service.py
platform-enterprise-python/services/platform-user/: pyproject.toml
platform-enterprise-python/services/platform-user/src/platform_user/: __init__.py  config.py  dependencies.py  main.py  models.py  routers.py  schemas.py  service.py
platform-enterprise-python/services/platform-worker/: pyproject.toml
platform-enterprise-python/services/platform-worker/src/platform_worker/: __init__.py  config.py  handlers.py  main.py
platform-enterprise-python/tools/scripts/: build.py  dev.py  generate_secret.py
qrcode-decoder/: README.md  advanced_decoder.py  example_usage.py  main.py  qr_decoder.py  requirements.txt
ralph-wiggum-research/: README.md
springboot-utils-project/: README.md  pom.xml
zhipu-api-integration-research/: README.md  codex-config.toml  install-ai-cli.sh  setup-env.ps1  test-zhipu-api.py
zhipu-api-integration-research/docker/: .env.example  docker-compose.yml
zhipu-api-integration-research/docs/: claude-code-setup.md  codex-cli-setup.md  docker-gitlab-exploration.md  docker-setup.md  gemini-cli-setup.md  step-by-step-setup.md
(+94 files in other folders)
