# Platform Enterprise Python - Root Workspace Configuration
# 企业级 Python 微服务平台 - 工作空间根配置

[project]
name = "platform-enterprise-python"
version = "1.0.0"
description = "Enterprise-grade Python microservices platform using modern toolchain"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Platform Team", email = "platform@example.com" }
]
keywords = [
    "microservices",
    "fastapi",
    "enterprise",
    "monorepo",
    "platform",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

# 根工作空间不安装依赖，各子项目独立管理
dependencies = []

[project.urls]
Homepage = "https://github.com/org/platform-enterprise-python"
Documentation = "https://docs.platform.io"
Repository = "https://github.com/org/platform-enterprise-python"
Issues = "https://github.com/org/platform-enterprise-python/issues"

# ============================================
# uv 工作空间配置
# ============================================
[tool.uv]
managed = true
dev-dependencies = [
    # 代码质量
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    # 测试
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "testcontainers>=4.8.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",

    # 文档
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",

    # 开发工具
    "pre-commit>=4.0.0",
    "ipython>=8.29.0",
]

[tool.uv.workspace]
members = [
    "libs/*",
    "services/*",
]

# 工作空间内部依赖源配置
[tool.uv.sources]
platform-core = { workspace = true }
platform-db = { workspace = true }
platform-cache = { workspace = true }
platform-messaging = { workspace = true }
platform-observability = { workspace = true }

# ============================================
# 构建系统
# ============================================
[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []  # 根包不构建

# ============================================
# Ruff 配置 (Linter & Formatter)
# ============================================
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "migrations",
    "*.pyi",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "PIE",    # flake8-pie
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "FLY",    # flynt
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
]
ignore = [
    "E501",     # 行长度由 formatter 处理
    "PLR0913",  # 太多参数 (FastAPI 依赖注入常见)
    "PLR2004",  # Magic value (测试中常见)
    "S101",     # assert 使用 (测试中需要)
    "B008",     # 函数调用作为默认参数 (FastAPI Depends)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = [
    "platform_core",
    "platform_db",
    "platform_cache",
    "platform_messaging",
    "platform_observability",
    "platform_api",
    "platform_auth",
    "platform_user",
    "platform_worker",
    "platform_notification",
]
force-single-line = false
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # 允许 assert
    "ARG001",  # 允许未使用参数 (fixtures)
    "PLR2004", # 允许 magic values
]
"**/migrations/*.py" = ["ALL"]
"conftest.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80

# ============================================
# MyPy 配置 (Type Checker)
# ============================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

# 插件
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

# 排除
exclude = [
    "migrations",
    "tests",
    ".venv",
]

# 第三方库配置
[[tool.mypy.overrides]]
module = [
    "redis.*",
    "arq.*",
    "testcontainers.*",
    "factory.*",
]
ignore_missing_imports = true

# Pydantic 插件配置
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# ============================================
# Pytest 配置
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

# ============================================
# Coverage 配置
# ============================================
[tool.coverage.run]
source = ["libs", "services"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "class .*\\bProtocol\\):",
]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================
# Git Cliff 配置 (Changelog 生成)
# ============================================
[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to this project will be documented in this file.
"""
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [Unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}
        - {{ commit.message | upper_first }}\
    {% endfor %}
{% endfor %}\n
"""
footer = ""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
commit_parsers = [
    { message = "^feat", group = "Features" },
    { message = "^fix", group = "Bug Fixes" },
    { message = "^doc", group = "Documentation" },
    { message = "^perf", group = "Performance" },
    { message = "^refactor", group = "Refactoring" },
    { message = "^style", group = "Styling" },
    { message = "^test", group = "Testing" },
    { message = "^chore", group = "Miscellaneous" },
    { message = "^ci", group = "CI/CD" },
]
filter_commits = false
tag_pattern = "v[0-9]*"
