[project]
name = "platform-cache"
version = "1.0.0"
description = "Platform cache abstraction layer"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_cache"]
