[project]
name = "platform-messaging"
version = "1.0.0"
description = "Platform messaging and event system"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.2.0",
    "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_messaging"]
