[project]
name = "platform-auth"
version = "1.0.0"
description = "Platform Authentication Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "platform-core",
    "platform-db",
    "platform-cache",
    "platform-messaging",
    "platform-observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_auth"]
