[project]
name = "platform-notification"
version = "1.0.0"
description = "Platform Notification Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "platform-core",
    "platform-db",
    "platform-cache",
    "platform-messaging",
    "platform-observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_notification"]
