[project]
name = "platform-worker"
version = "1.0.0"
description = "Platform Background Worker Service"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.6.0",
    "platform-core",
    "platform-db",
    "platform-cache",
    "platform-messaging",
    "platform-observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_worker"]
